--- a/standalone-doc/al0.tex
+++ b/standalone-doc/al0.tex
@@ -231,8 +231,8 @@ Perhaps add a switch that folds standardisation into the compaction
 \section{Coincidence handling}
 
 The coincidences are stored in the coset table by using the ideas
-  described in \cite{Bee}, but not the data structure.
-Instead we use the data structure described in \cite{CDHW}.
+  described in \cite{Bee84}, but not the data structure.
+Instead we use the data structure described in \cite{CDHW73}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
