--- a/standalone-doc/back.tex
+++ b/standalone-doc/back.tex
@@ -61,7 +61,7 @@ In this case, the elements of $G$ are words in the \emph{generators}
 Actually, amongst the \emph{relators} we will also allow \emph{relations},
   which are equations of the form $w_1 = w_2$ (equivalent to the relator 
   $w_1w_2^{-1}$), where $w_1, w_2$ are words in the generators of $G$.
-See the introduction of \cite{MKS} for a rather nice account of the
+See the introduction of \cite{MKS76} for a rather nice account of the
   terminology of presentations.
 
 \section{History}
@@ -71,10 +71,10 @@ See the introduction of \cite{MKS} for a rather nice account of the
 The concept of a subgroup, and its cosets, has been known since the 
   beginnings of group theory.
 One of the earliest (practical?) uses of cosets seems to have been by
-  Moore \cite{Moo}, who gives presentations for $S_n$ \amp $A_n$ and
+  Moore \cite{Moo97}, who gives presentations for $S_n$ \amp $A_n$ and
   proves them correct by, in effect, counting the $n$ cosets of 
   $[S_n:S_{n-1}]$ \amp $[A_n:A_{n-1}]$.
-Dickson \cite[\S264]{Dic} presents a more accessible account, and 
+Dickson \cite[\S264]{Dic01} presents a more accessible account, and 
   explicitly notes that ``these sets form a rectangular table''\kern-2pt.
 %
 To illustrate this, we paraphrase Dickson's proof for the case $S_4$.
@@ -144,14 +144,14 @@ coset                   & $b_1$ & $b_2$ & $b_3$ \\
 \end{table}
 
 The construction of a coset table was systematised and popularised by Todd
-  \amp Coxeter \cite{TC} (or see \cite[Chapter 2]{CM}).
+  \amp Coxeter \cite{TC36} (or see \cite[Chapter 2]{CM72}).
 The first known computer implementation was that of Haselgrove in $1953$.
 This, along with other early implementations, is described by Leech
-  \cite{Lee3}.
+  \cite{Lee63}.
 Detailed accounts of the techniques used in coset enumeration can be found
-  in \cite{CDHW,Hav,Lee,Neu,Sim}.
+  in \cite{CDHW73,Hav91,Lee84,Neu82,Sim94}.
 Formal proofs of the correctness of various strategies for coset
-  enumeration are given in \cite{Men,Neu,Sim}.
+  enumeration are given in \cite{Men64,Neu82,Sim94}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
