--- a/standalone-doc/ex001.tex
+++ b/standalone-doc/ex001.tex
@@ -18,7 +18,7 @@ Here we demonstrate the various \ttt{sims} modes, and see if we can
 The ability to do so gives our confidence in the correctness of \ace\ a
   large boost.
 We work with the formal inverses of the relators and subgroup generators
-  from \cite{Sim}, since definitions are made from the front in Sims'
+  from \cite{Sim94}, since definitions are made from the front in Sims'
   routines and from the rear in \ace.
 We may also have to use the \ttt{asis} flag, to force the column order (by
   entering involutions as \ttt{xx}) and to preserve the relator ordering.
