--- a/standalone-doc/ex002.tex
+++ b/standalone-doc/ex002.tex
@@ -18,7 +18,7 @@ If all definitions are made by applying cosets to relators, then the coset
   generators is not present in the relators.
 The \ttt{row} and \ttt{mend} parameters can be used to deal with these
   sorts of situations.
-Consider the following examples, drawn from \cite{War}; see the input file
+Consider the following examples, drawn from \cite{War77}; see the input file
   \ttt{ex002.in}.
 Note that, although the \ttt{row} parameter is specifically intended to
   prevent the table containing holes, the \ttt{mend} parameter actually
