--- a/standalone-doc/pt.tex
+++ b/standalone-doc/pt.tex
@@ -26,9 +26,9 @@ We can do other things with this data structure; i.e., find a presentation
 
 The Fibonacci group 
  $$ F(2,5) = \langle a,b,c,d,e \mid abC, bcD, cdE, deA, eaB \rangle $$
-  is known to be the cyclic group of order $11$, $C_{11}$ \cite{Can}.
+  is known to be the cyclic group of order $11$, $C_{11}$ \cite{Con65}.
 A proof of this can be readily extracted from an index one coset 
-  enumeration of $[F(2,5) : \langle a \rangle]$, as discussed in \cite{Lee2}.
+  enumeration of $[F(2,5) : \langle a \rangle]$, as discussed in \cite{Lee77}.
 We use this as an example to illustrate, in detail, the basic technique for
   producing proofs from the workings of an enumeration.
 %
@@ -255,7 +255,7 @@ Note that multiple coincidences can cause more complicated proof
   words, which this example does not illustrate.
 %
 Two further examples, complete with their working, can be found in 
-  \cite{Lee4}.
+  \cite{Lee70}.
 Note however, that the proof words there (called `substitution words') do
   not explicitly include the relevant relator.
 
