--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -1,5 +1,33 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%
+%W  manual.bib                ACE documentation              Colin Ramsay
+%W                                                      Joachim Neub"user
+%W                                                            Greg Gamble
+%%
+%H  $Id$
+%%
+%%  manual.bib - BibTeX database file of ACE references
 
-@INCOLLECTION{Lee4,
+%%  In previous versions, years were not attached to the keys in the true
+%%  `alpha' style; and BCP became Magma etc. (this change seemed sensible
+%%  since updates that change both the authors and year seemed probable).
+%%  Here is a list of the changes to the keys:
+%%
+%%    Lee4 -> Lee70   CDHW -> CDHW73   Dok  -> Dok88   Lee  -> Lee84
+%%    War  -> War77   BCP  -> Magma    Sch  -> GAP     AHT  -> AHT84
+%%    HKRR -> HKRR84  Bee  -> Bee84    Hav  -> Hav91   Pla  -> Pla92
+%%    HR   -> HR99a   KB   -> KB70     Lee2 -> Lee77   Hav2 -> Hav76   
+%%    Ede  -> Ede89   Fel  -> Fel98    Moo  -> Moo97   TC   -> TC36
+%%    Lee3 -> Lee63   Sim  -> Sim94    Neu  -> Neu82   Men  -> Men64
+%%    Can  -> Con65   Dic  -> Dic01    HR1  -> HR99b   HR2  -> HR00
+%%    Hig  -> Hig51   Neu1 -> Neu54    Neu2 -> Neu79   CH   -> CH97
+%%    CLR  -> CLR90   MKS  -> MKS76    CM   -> CM72
+
+@PREAMBLE{ "% Awful hack to remove \qquad from after a URL           " }
+@PREAMBLE{ "\def\rmqquadafter#1#2{\let\qquadsave\qquad \def\qquad{}  
+                                 #1{#2}\let\qquad\qquadsave}         " }
+
+@INCOLLECTION{Lee70,
   AUTHOR        = {John Leech},
   TITLE         = {Coset enumeration},
   BOOKTITLE     = {Computational Problems in Abstract Algebra},
@@ -21,7 +49,7 @@
   MONTH         = {July}
 }
 
-@ARTICLE{Dok,
+@ARTICLE{Dok88,
   AUTHOR        = {Dragomir Z. Dokovic},
   TITLE         = {Presentations of some finite simple groups},
   JOURNAL       = {Journal of the Australian Mathematical Society 
@@ -33,7 +61,7 @@
   MONTH         = {October}
 }
 
-@INCOLLECTION{Lee,
+@INCOLLECTION{Lee84,
   AUTHOR        = {John Leech},
   TITLE         = {Coset enumeration},
   BOOKTITLE     = {Computational Group Theory},
@@ -43,7 +71,7 @@
   PAGES         = {3--18}
 }
 
-@INCOLLECTION{War,
+@INCOLLECTION{War77,
   AUTHOR        = {J.N. Ward},
   TITLE         = {A note on the {Todd-Coxeter} algorithm},
   BOOKTITLE     = {Group Theory (Canberra, 1975)},
@@ -55,7 +83,7 @@
   PAGES         = {126--129}
 }
 
-@ARTICLE{BCP,
+@ARTICLE{Magma,
   AUTHOR        = {W. Bosma and J. Cannon and C. Playoust},
   TITLE         = {The \textsc{Magma} algebra system {I}: 
 			the user language},
@@ -65,7 +93,7 @@
   PAGES         = {235--265}
 }
 
-@MANUAL{Sch,
+@MANUAL{GAP,
   TITLE         = {\textsf{GAP} -- Groups, Algorithms and Programming},
   AUTHOR        = {M. {Sch\"onert et al.}},
   ORGANIZATION  = {Lehrstuhl D f\"ur Mathematik},
@@ -74,7 +102,7 @@
   YEAR          = {1995}
 }
 
-@INCOLLECTION{AHT,
+@INCOLLECTION{AHT84,
   AUTHOR        = {M.D. Atkinson and R.A. Hassan and M.P. Thorne},
   TITLE         = {Group theory on a micro-computer},
   BOOKTITLE     = {Computational Group Theory},
@@ -84,7 +112,7 @@
   PAGES         = {275--280}
 }
 
-@INCOLLECTION{HKRR,
+@INCOLLECTION{HKRR84,
   AUTHOR        = {George Havas and P.E. Kenne and J.S. Richardson and
 			E.F. Robertson},
   TITLE         = {A {Tietze} transformation program},
@@ -96,7 +124,7 @@
   PAGES         = {69--73}
 }
 
-@INCOLLECTION{Bee,
+@INCOLLECTION{Bee84,
   AUTHOR        = {M.J. Beetham},
   TITLE         = {Space saving in coset enumeration},
   BOOKTITLE     = {Computational Group Theory},
@@ -106,9 +134,20 @@
   PAGES         = {19--25}
 }
 
-@BOOK{Pla,
+@INPROCEEDINGS{Hav91,
+  AUTHOR        = {George Havas},
+  TITLE         = {Coset enumeration strategies},
+  BOOKTITLE     = {ISSAC'91 (Proceedings of the 1991 International
+			Symposium on Symbolic and Algebraic Computation)},
+  YEAR          = {1991},
+  EDITOR        = {Stephen M. Watt},
+  PAGES         = {191--199},
+  PUBLISHER     = {ACM Press}
+}
+
+@BOOK{Pla92,
   AUTHOR        = {P.J. Plauger},
-  TITLE         = {The Standard C Library},
+  TITLE         = {The Standard {C} Library},
   PUBLISHER     = {Prentice Hall},
   YEAR          = {1992}
 }
@@ -116,9 +155,10 @@
 @MISC{C11,
   KEY		= {Group-pub-forum},
   NOTE          = {Group-pub-forum e-mail list
-		     (`group-pub-forum@maths.bath.ac.uk'),
+		     (\Mailto{group-pub-forum@maths.bath.ac.uk}),
 		   Problem 11, 1996.
-		   See \URL{http://www2.bath.ac.uk/~masgcs/problem/problem11.htm}}
+		   See
+                   {\rmqquadafter\URL{http://www2.bath.ac.uk/~masgcs/problem/problem11.htm}}}
 }
 
 @MISC{HHKR,
@@ -130,11 +170,13 @@
 
 @MISC{HR99a,
   AUTHOR	= {George Havas and Colin Ramsay},
-  TITLE		= {Coset enumeration: {ACE} version 3, 1999},
-  NOTE		= {Available as \URL{http://www.csee.uq.edu.au/~havas/ace3.tar.gz}}
+  TITLE		= {Coset enumeration: {\sf ACE} version 3},
+  YEAR          = {1999},
+  NOTE		= {Available as 
+                   {\rmqquadafter\URL{http://www.csee.uq.edu.au/~havas/ace3.tar.gz}}}
 }
 
-@INCOLLECTION{KB,
+@INCOLLECTION{KB70,
   AUTHOR        = {D.E. Knuth and P.B. Bendix},
   TITLE         = {Simple word problems in universal algebras},
   BOOKTITLE     = {Computational Problems in Abstract Algebra},
@@ -143,7 +185,7 @@
   PAGES         = {263--297},
 }
 
-@INCOLLECTION{Lee2,
+@INCOLLECTION{Lee77,
   AUTHOR        = {John Leech},
   TITLE         = {Computer proof of relations in groups},
   BOOKTITLE     = {Topics in Group Theory and Computation},
@@ -153,7 +195,7 @@
   PAGES         = {38--61}
 }
 
-@ARTICLE{Hav2,
+@ARTICLE{Hav76,
   AUTHOR        = {George Havas},
   TITLE         = {Computer aided determination of a {Fibonacci} group},
   JOURNAL       = {Bulletin of the Australian Mathematical Society},
@@ -162,30 +204,31 @@
   PAGES         = {297--305}
 }
 
-@MASTERSTHESIS{Ede,
+@MASTERSTHESIS{Ede89,
   AUTHOR        = {Margaret Edeson},
   TITLE         = {Investigations in coset enumeration},
   SCHOOL        = {Canberra College of Advanced Education},
   YEAR          = {1989}
 }
 
-@MISC{Fel,
+@MISC{Fel98,
   AUTHOR	= {V. Felsch},
   NOTE		= {E-mail to Havas, 1998}
 }
 
-@ARTICLE{Moo,
+@ARTICLE{Moo97,
   AUTHOR        = {E.H. Moore},
   TITLE         = {Concerning the abstract groups of order $k!$ and
-	$\frac{1}{2}k!$ holohedrically isomorphic with the symmetric and 
-	the alternating substitution-groups on $k$ letters},
+	           $\frac{1}{2}k!$ holohedrically isomorphic with the
+                   symmetric and the alternating substitution-groups
+                   on $k$ letters},
   JOURNAL       = {Proceedings of the London Mathematical Society (1)},
   YEAR          = {1897},
   VOLUME        = {28},
   PAGES         = {357--366}
 }
 
-@ARTICLE{TC,
+@ARTICLE{TC36,
   AUTHOR        = {J.A. Todd and H.S.M. Coxeter},
   TITLE         = {A practical method for enumerating cosets of finite
 			abstract groups},
@@ -195,7 +238,7 @@
   PAGES         = {26--34}
 }
 
-@ARTICLE{Lee3,
+@ARTICLE{Lee63,
   AUTHOR        = {J. Leech},
   TITLE         = {Coset enumeration on digital computers},
   JOURNAL       = {Proceedings of the Cambridge Philosophical Society},
@@ -204,25 +247,28 @@
   PAGES         = {257--267}
 }
 
-@BOOK{Sim,
+@BOOK{Sim94,
   AUTHOR        = {Charles C. Sims},
   TITLE         = {Computation with finitely presented groups},
   PUBLISHER     = {Cambridge University Press},
   YEAR          = {1994}
 }
 
-@INCOLLECTION{Neu,
-  AUTHOR        = {J. Neub\"{u}ser},
-  TITLE         = {An elementary introduction to coset-table methods in
-			computational group theory},
-  BOOKTITLE     = {Groups -- St. Andrews 1981},
-  SERIES        = {London Mathematical Society Lecture Note Series 71},
-  PUBLISHER     = {Cambridge University Press},
-  YEAR          = {1982},
-  PAGES         = {1--45}
-}
+%% Already included in ../../../doc/manual.bib}
+%% ... by removing the `at' symbol BibTeX sees the following as comments:
+%%
+%% INCOLLECTION{Neu82,
+%%   AUTHOR        = {J. Neub\"{u}ser},
+%%   TITLE         = {An elementary introduction to coset table methods in
+%% 			computational group theory},
+%%   BOOKTITLE     = {Groups -- St. Andrews 1981},
+%%   SERIES        = {London Mathematical Society Lecture Note Series 71},
+%%   PUBLISHER     = {Cambridge University Press},
+%%   YEAR          = {1982},
+%%   PAGES         = {1--45}
+%% }
 
-@ARTICLE{Men,
+@ARTICLE{Men64,
   AUTHOR        = {N.S. Mendelsohn},
   TITLE         = {An algorithmic solution for a word problem in group
 			theory},
@@ -233,7 +279,7 @@
   NOTE		= {Corrigendum: \textit{Ibid.} 17:505, 1965.}
 }
 
-@ARTICLE{Can,
+@ARTICLE{Con65,
   AUTHOR        = {J.H. Conway},
   TITLE         = {Problem \#5327},
   JOURNAL       = {American Mathematical Monthly},
@@ -241,11 +287,11 @@
   VOLUME        = {72},
   PAGES         = {915},
   NOTE		= {Solutions, by various authors, given in: 
-		Generators and relations for cyclic groups,
-		\textit{Ibid.}, 74:91--93, 1965.}
+		   Generators and relations for cyclic groups,
+		   \textit{Ibid.}, 74:91--93, 1965.}
 }
 
-@BOOK{Dic,
+@BOOK{Dic01,
   AUTHOR        = {L.E. Dickson},
   TITLE         = {Linear Groups, with an exposition of the Galois field
 			theory},
@@ -253,16 +299,24 @@
   YEAR          = {1901}
 }
 
-@TECHREPORT{HR99,
+@TECHREPORT{HR99b,
   AUTHOR        = {George Havas and Colin Ramsay},
   TITLE         = {Experiments in coset enumeration},
-  INSTITUTION   = {Centre for Discrete Mathematics and Computing},
+  INSTITUTION   = {Centre for Discrete Mathematics and Computing,
+                   The University of Queensland},
   YEAR          = {1999},
   NUMBER        = {13},
-  ADDRESS       = {The University of Queensland}
+  ADDRESS       = {St.~Lucia 4072, Australia}
 }
 
-@ARTICLE{Hig,
+@ARTICLE{HR00,
+  AUTHOR        = {George Havas and Colin Ramsay},
+  TITLE         = {The trivial group made easy},
+  JOURNAL       = {Bulletin of the Australian Mathematical Society},
+  YEAR          = {to appear}
+}
+
+@ARTICLE{Hig51,
   AUTHOR        = {G. Higman},
   TITLE         = {A finitely generated infinite simple group},
   JOURNAL       = {Journal of the London Mathematical Society},
@@ -271,7 +325,7 @@
   PAGES         = {61--64}
 }
 
-@ARTICLE{Neu1,
+@ARTICLE{Neu54,
   AUTHOR        = {B.H. Neumann},
   TITLE         = {An essay on free products of groups with
 			amalgamations},
@@ -282,7 +336,7 @@
   PAGES         = {503--554}
 }
 
-@ARTICLE{Neu2,
+@ARTICLE{Neu79,
   AUTHOR        = {B.H. Neumann},
   TITLE         = {Proofs},
   JOURNAL       = {The Mathematical Intelligencer},
@@ -292,7 +346,7 @@
   PAGES         = {18--19}
 }
 
-@INCOLLECTION{CH,
+@INCOLLECTION{CH97,
   AUTHOR        = {Gene Cooperman and George Havas},
   TITLE         = {Practical parallel coset enumeration},
   BOOKTITLE     = {Workshop on High Performance Computing and Gigabit 
@@ -305,7 +359,7 @@
   PAGES         = {15--27}
 }
 
-@BOOK{CLR,
+@BOOK{CLR90,
   AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
 			L. Rivest},
   TITLE         = {Introduction to Algorithms},
@@ -313,3 +367,32 @@
   YEAR          = {1990}
 }
 
+@BOOK{MKS76,
+  AUTHOR        = {Wilhelm Magnus and Abraham Karrass and Daniel Solitar},
+  TITLE         = {Combinatorial Group Theory},
+  PUBLISHER     = {Dover},
+  EDITION       = {2nd},
+  YEAR          = {1976}
+}
+
+@BOOK{CM72,
+  AUTHOR        = {H.S.M. Coxeter and W.O.J. Moser},
+  TITLE         = {Generators and Relations for Discrete Groups},
+  PUBLISHER     = {Springer-Verlag},
+  EDITION       = {3rd},
+  YEAR          = {1972}
+}
+
+@TECHREPORT{Ram99,
+  AUTHOR        = {Colin Ramsay},
+  TITLE         = {{\sf ACE} for Amateurs (Version 3.001)},
+  INSTITUTION   = {Centre for Discrete Mathematics and Computing,
+                   The University of Queensland},
+  YEAR          = {1999},
+  NUMBER        = {14},
+  ADDRESS       = {St.~Lucia 4072, Australia}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%
+%E
